# rlox

./: Cargo.toml
src/: chunk.rs  chunk_printer.rs  compiler.rs  lib.rs  scanner.rs  token.rs  token_type.rs  vm.rs
tests/: goldens.rs
tests/goldenfiles/chunks/: num.lox
tests/goldenfiles/scans/: a.lox  fib.lox  less.lox  lots_of_stuff.lox  num.lox
tests/programs/: fib.lox  lots_of_stuff.lox
