[package]
name = "rlox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.16", features = ["derive"] }
num_enum = "0.5.7"
strum = "0.24.1"
strum_macros = "0.24.3"

[dev-dependencies]
goldenfile = "1.4.3"
